--- a/src/article.html
+++ b/src/article.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ca">
   <head>
@@ -7,91 +6,89 @@
     <title>Jornades Economia Circular</title>
     <link rel="stylesheet" href="./assets/styles/main.scss" />
     <script type="module" src="./assets/scripts/main.js"></script>
-
   </head>
   <body>
     <header class="header">
-      <div class="logo">
+      <div class="header__logo">
         <a href="index.html">
-        <img src="assets/images/logo-centre2.png" alt="Logo Jornades" />
-      </a>
-      </div>      
-      <nav class="nav">
-        <a href="participants.html">ponents</a>
-        <a href="article.html">blog</a>
-        <a href="Contacta.html">Contacta'ns</a>
+          <img src="assets/images/logo-centre2.png" alt="Logo Jornades" />
+        </a>
+      </div>
+      <nav class="header__nav">
+        <a href="participants.html" class="header__nav-link">ponents</a>
+        <a href="article.html" class="header__nav-link">blog</a>
+        <a href="Contacta.html" class="header__nav-link">Contacta'ns</a>
       </nav>
-      
     </header>
+
     <hr />
 
-<main class="article">
-  <header class="article__header">
-    <h1>El futur de l'economia circular a Andorra</h1>
-    <p class="author">per EcoJornades</p>
-  </header>
+    <main class="article">
+      <header class="article__header">
+        <h1 class="article__title">El futur de l'economia circular a Andorra</h1>
+        <p class="article__author">per EcoJornades</p>
+      </header>
 
-  <section class="article__content">
-    <img src="assets/images/perfil1.jpg" alt="Economia circular" />
+      <section class="article__content">
+        <img class="article__image" src="assets/images/eco-circular.jpg" alt="Economia circular" />
 
-    <p>
-      Les jornades d'economia circular a Andorra han estat un èxit rotund. Amb
-      més de 200 participants i 15 ponents internacionals, l'interès per aquest model sostenible
-      no deixa de créixer.
-    </p>
+        <p class="article__paragraph">
+          Les jornades d'economia circular a Andorra han estat un èxit rotund. Amb
+          més de 200 participants i 15 ponents internacionals, l'interès per aquest model sostenible
+          no deixa de créixer.
+        </p>
 
-    <p>
-      L’economia circular busca aprofitar millor els recursos i reduir els residus.
-      A Andorra, diverses empreses ja apliquen aquest model amb resultats positius. 
-      <strong>Reduir, reutilitzar i reciclar</strong> són els principis clau.
-    </p>
+        <p class="article__paragraph">
+          L’economia circular busca aprofitar millor els recursos i reduir els residus.
+          A Andorra, diverses empreses ja apliquen aquest model amb resultats positius. 
+          <strong>Reduir, reutilitzar i reciclar</strong> són els principis clau.
+        </p>
 
-    <blockquote>
-      "L'economia circular no és el futur, és el present. I a Andorra ho estem demostrant." – Marta Pujol, experta ambiental
-    </blockquote>
+        <blockquote class="article__blockquote">
+          "L'economia circular no és el futur, és el present. I a Andorra ho estem demostrant." – Marta Pujol, experta ambiental
+        </blockquote>
 
-    <ul>
-      <li>Conferències amb experts en sostenibilitat</li>
-      <li>Tallers per a professionals i estudiants</li>
-      <li>Propostes de projectes locals</li>
-    </ul>
+        <ul class="article__list">
+          <li class="article__list-item">Conferències amb experts en sostenibilitat</li>
+          <li class="article__list-item">Tallers per a professionals i estudiants</li>
+          <li class="article__list-item">Propostes de projectes locals</li>
+        </ul>
 
-    <img src="assets/images/perfil1.jpg" alt="Taller pràctic" />
+        <img class="article__image" src="assets/images/eco-circular2.jpg" alt="Taller pràctic" />
 
-    <p>
-      Les jornades també han servit per enfortir la col·laboració entre institucions, 
-      empreses i ciutadania. S’han presentat iniciatives com bancs de materials, compostatge compartit i reutilització d’aigua.
-    </p>
+        <p class="article__paragraph">
+          Les jornades també han servit per enfortir la col·laboració entre institucions, 
+          empreses i ciutadania. S’han presentat iniciatives com bancs de materials, compostatge compartit i reutilització d’aigua.
+        </p>
 
-    <p>
-      A més, la presència de joves emprenedors ha aportat idees innovadores.
-      El futur d’Andorra pot ser més verd si seguim apostant per aquests valors.
-    </p>
-  </section>
-</main>
+        <p class="article__paragraph">
+          A més, la presència de joves emprenedors ha aportat idees innovadores.
+          El futur d’Andorra pot ser més verd si seguim apostant per aquests valors.
+        </p>
+      </section>
+    </main>
 
-<footer class="footer">
-  <p>Vols participar o col·laborar? Contacta amb nosaltres!</p>
-  <hr />
-  <div class="footer__bottom">
-    <div class="footer__logo">
-      <img src="assets/images/logo-centre2.png" alt="Logo Jornades" />
-    </div>
+    <footer class="footer">
+      <p class="footer__text">Vols participar o col·laborar? Contacta amb nosaltres!</p>
+      <hr />
+      <div class="footer__bottom">
+        <div class="footer__logo">
+          <img src="assets/images/logo-centre2.png" alt="Logo Jornades" />
+        </div>
 
-    <div class="footer__nav">
-      <a href="index.html">Inici</a>
-      <a href="participants.html">Participants</a>
-      <a href="article.html">Programa</a>
-      <a href="Contacta.html">Altres</a>
-    </div>
+        <div class="footer__nav">
+          <a href="index.html" class="footer__nav-link">Inici</a>
+          <a href="participants.html" class="footer__nav-link">Participants</a>
+          <a href="article.html" class="footer__nav-link">Programa</a>
+          <a href="Contacta.html" class="footer__nav-link">Altres</a>
+        </div>
 
-    <div class="footer__icons">
-      <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-      <a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-      <a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-    </div>
-  </div>
-</footer>
-
-</body>
+        <div class="footer__icons">
+          <a href="#" class="footer__icon"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+          <a href="#" class="footer__icon"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
+          <a href="#" class="footer__icon"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
