--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
     </header>
 
     <main class="poster">
+      <div class="alert alert-info text-center" role="alert">
+        Benvingut a les Jornades d'Economia Circular! No et perdis les nostres activitats destacades.
+      </div>
       <div class="poster__grid">
         <h1 class="poster__title">
           Una jornada<br />
