--- a/src/participants.html
+++ b/src/participants.html
@@ -25,15 +25,18 @@
 
     <main class="speakers">
       <h1 class="speakers__title">Ponents</h1>
-      <div class="speakers__grid">
-        <div class="speakers__card">
-          <img class="speakers__image" src="assets/images/perfil1.jpg" alt="Speaker 1" />
-          <h2 class="speakers__name">Ponent 1</h2>
-          <p class="speakers__description">Activista climàtic i divulgador sobre consum responsable.</p>
+      <div class="card mx-auto mb-4" style="width: 18rem;">
+        <img src="assets/images/perfil2.jpg" class="card-img-top" alt="Ponent Destacat">
+        <div class="card-body">
+          <h5 class="card-title">Ponent destacat</h5>
+          <p class="card-text">Experta ambiental i ponent principal de les jornades.</p>
+          <a href="article.html" class="btn btn-primary">Llegir més</a>
         </div>
+      </div>
+      <div class="speakers__grid">
 
         <div class="speakers__card">
-          <img class="speakers__image" src="assets/images/perfil2.jpg" alt="Speaker 2" />
+          <img class="speakers__image" src="assets/images/perfil1.jpg" alt="Speaker 2" />
           <h2 class="speakers__name">Ponent 2</h2>
           <p class="speakers__description">Expert en gestió de residus i sostenibilitat urbana.</p>
         </div>
