--- a/src/Contacta.html
+++ b/src/Contacta.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/styles/main.scss" />
     <script type="module" src="./assets/scripts/main.js"></script>
   </head>
-  <body>
+  <body class="contact-page">
     <header class="header">
       <div class="header__logo">
         <a href="index.html">
@@ -24,10 +24,36 @@
     <hr />
 
     <main class="contact">
+      <h1 class="contact__title">Preguntes freqüents</h1>
+      <div class="accordion mb-4" id="faqAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Què són les Jornades d'Economia Circular?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Són una sèrie de xerrades, tallers i activitats per promoure la sostenibilitat i la gestió responsable dels recursos.
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Necessito inscripció prèvia?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Sí, recomanem inscriure's a través del formulari per assegurar plaça als tallers.
+            </div>
+          </div>
+        </div>
+      </div>
+
       <h1 class="contact__title">Contacta amb nosaltres</h1>
-
-   
-
       <form name="contact" method="POST" data-netlify="true" class="contact__form">
         <div class="contact__form-group">
           <label for="name" class="contact__label">Nom:</label>
@@ -44,7 +70,7 @@
           <textarea id="message" name="message" class="contact__textarea" rows="5" required></textarea>
         </div>
 
-        <button type="submit" class="contact__button">Enviar</button>
+        <button type="submit" class="btn btn-success">Enviar missatge</button>
       </form>
     </main>
 
